--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -1163,43 +1163,47 @@ body .group-fcprimary .btn:not(.btn-primary),
 body .group-fcinfo .btn:not(.btn-primary),
 body .group-fcwarning .btn:not(.btn-primary),
 body .group-fcmethod .btn:not(.btn-primary) {
-	color: #333 !important;
-	background-color: #e6e6e6 !important;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#e6e6e6)) !important;
-	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6) !important;
-	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6) !important;
-	background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6) !important;
-	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6) !important;
-	background-image: linear-gradient(to bottom, #ffffff, #e6e6e6) !important;filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#ffffff, endColorstr=#e6e6e6) !important;
-	background-repeat: repeat-x !important;
-	border-color: #bbb #bbb #a2a2a2 !important;
-	border-image: none !important;
+	color: #333;
+	background-color: #e6e6e6;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#e6e6e6));
+	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#ffffff, endColorstr=#e6e6e6);
+	background-repeat: repeat-x;
+	border-color: #bbb #bbb #a2a2a2;
+	border-image: none;
 }
 body .group-fcinfo .btn.active:not(.btn-primary),
 body .group-fcprimary .btn.active:not(.btn-primary),
 body .group-fcsuccess .btn.active:not(.btn-primary),
 body .group-fcwarning .btn.active:not(.btn-primary),
 body .group-fcmethod .btn.active:not(.btn-primary) {
-	color: #fff !important;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !important;
-	
-	background-image: none !important;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.15) !important;
-	outline: 0 none !important;
+	color: #fff;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	background-image: none;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.15);
+	outline: 0 none;
 }
-body .group-fcinfo .btn.active:not(.btn-primary) { background-color: #2f96b4 !important; border-color: #2f96b4 #2f96b4 #1f6377 !important; }
-body .group-fcprimary .btn.active:not(.btn-primary) { background-color: #15497c !important; border-color: #15497c #15497c #0a223b !important; }
-body .group-fcsuccess .btn.active:not(.btn-primary) { background-color: #51a351 !important; border-color: #51a351 #51a351 #387038 !important; }
-body .group-fcwarning .btn.active:not(.btn-primary) { background-color: #faa732 !important; border-color: #f89406 #f89406 #ad6704 !important; }
+body .group-fcinfo .btn.active:not(.btn-primary) { background-color: #2f96b4; border-color: #2f96b4 #2f96b4 #1f6377; }
+body .group-fcprimary .btn.active:not(.btn-primary) { background-color: #15497c; border-color: #15497c #15497c #0a223b; }
+body .group-fcsuccess .btn.active:not(.btn-primary) { background-color: #51a351; border-color: #51a351 #51a351 #387038; }
+body .group-fcwarning .btn.active:not(.btn-primary) { background-color: #faa732; border-color: #f89406 #f89406 #ad6704; }
 
-body .group-fcmethod.fcyesno .btn.active:not(.btn-primary):first-of-type { background-color: #bd362f !important; border-color: #bd362f #bd362f #802420 !important; }
-body .group-fcmethod.fcyesno .btn.active:not(.btn-primary) { background-color: #51a351 !important; border-color: #51a351 #51a351 #387038 !important; }
+/*body .group-fcinfo .btn:hover { border-color: #2f96b4 #2f96b4 #1f6377; }
+body .group-fcprimary .btn:hover { border-color: #15497c #15497c #0a223b; }
+body .group-fcsuccess .btn:hover { border-color: #51a351 #51a351 #387038; }
+body .group-fcwarning .btn:hover { border-color: #f89406 #f89406 #ad6704; }*/
 
-body .group-fcmethod.fcoffactive .btn.active:not(.btn-primary):first-of-type { background-color: #bd362f !important; border-color: #bd362f #bd362f #802420 !important; }
-body .group-fcmethod.fcoffactive .btn.active:not(.btn-primary) { background-color: #faa732 !important; border-color: #f89406 #f89406 #ad6704 !important; }
+body .group-fcmethod.fcyesno .btn.active:not(.btn-primary):first-of-type { background-color: #bd362f; border-color: #bd362f #bd362f #802420; }
+body .group-fcmethod.fcyesno .btn.active:not(.btn-primary) { background-color: #51a351; border-color: #51a351 #51a351 #387038; }
 
-body .group-fcmethod .btn.active:not(.btn-primary):first-of-type { background-color: #51a351 !important; border-color: #51a351 #51a351 #387038 !important; }
-body .group-fcmethod .btn.active:not(.btn-primary) { background-color: #faa732 !important; border-color: #f89406 #f89406 #ad6704 !important; }
+body .group-fcmethod.fcoffactive .btn.active:not(.btn-primary):first-of-type { background-color: #bd362f; border-color: #bd362f #bd362f #802420; }
+body .group-fcmethod.fcoffactive .btn.active:not(.btn-primary) { background-color: #faa732; border-color: #f89406 #f89406 #ad6704; }
+
+body .group-fcmethod .btn.active:not(.btn-primary):first-of-type { background-color: #51a351; border-color: #51a351 #51a351 #387038; }
+body .group-fcmethod .btn.active:not(.btn-primary) { background-color: #faa732; border-color: #f89406 #f89406 #ad6704; }
 
 
 /*#flexicontent div fieldset.panelform :not(.input-prepend):not(.input-append):not(.btn-group) > input,
