--- a/site/assets/css/flexi_containers.css
+++ b/site/assets/css/flexi_containers.css
@@ -1,8 +1,9 @@
-/***********************
- * Flexicontent messages
- ***********************/
 
-.fc-close {
+/******************************************
+ * Flexicontent messages, (placed anywhere)
+ ******************************************/
+
+body .fc-close {
 	color: #000000;
 	float: right;
 	font-size: 20px;
@@ -12,16 +13,17 @@
 	text-shadow: 0 1px 0 #FFFFFF;
 	margin-top: -2px;
 }
-.fc-close:hover {
-	color: #000000 !important;
+body .fc-close:hover {
+	color: #000000;
 	cursor: pointer;
 	opacity: 0.4;
 	text-decoration: none;
-	background: none !important;
+	background: none;
 }
 
 
-.fc-mssg-inline, .fc-mssg {
+body .fc-mssg,
+body .fc-mssg-inline {
 	border: 1px solid;
 	display: block;
 	margin: 0 0 5px 0;
@@ -32,100 +34,97 @@
 	white-space: normal;
 	line-height: 140%;
 }
-.fc-mssg-inline {
+body .fc-mssg-inline {
 	display: inline-block;
 	margin: 0 0 0 12px;
 	max-width: 62%;
 }
 
-.fc-mssg-inline.fc-nobgimage,
-.fc-mssg.fc-nobgimage {
-	background-image: none !important;
+body .fc-mssg-inline.fc-nobgimage,
+body .fc-mssg.fc-nobgimage {
+	background-image: none;
 	padding: 2px 8px;
 }
 
-.fc-mssg-inline.fc-note,
-.fc-mssg.fc-note {
+body .fc-mssg-inline.fc-note,
+body .fc-mssg.fc-note {
 	background: #FCF8E3 url(../images/note.gif) no-repeat 10px 50%;
-	color: #C09853 !important;
-	border-color: #FBEED5 !important;
+	color: #C09853;
+	border-color: #FBEED5;
 }
-.fc-mssg-inline.fc-error,
-.fc-mssg.fc-error {
+body .fc-mssg-inline.fc-error,
+body .fc-mssg.fc-error {
 	background: #F2DEDE url(../images/error.png) no-repeat 10px 50%;
-  color: #B94A48 !important;
-	border-color: #EED3D7 !important;
+  color: #B94A48;
+	border-color: #EED3D7;
 }
-.fc-mssg-inline.fc-warning,
-.fc-mssg.fc-warning {
+body .fc-mssg-inline.fc-warning,
+body .fc-mssg.fc-warning {
 	background: #FCF8E3 url(../images/warning.png) no-repeat 10px 50%;
-	color: #C09853 !important;
-	border-color: #FBEED5 !important;
+	color: #C09853;
+	border-color: #FBEED5;
 }
-.fc-mssg-inline.fc-success,
-.fc-mssg.fc-success {
+body .fc-mssg-inline.fc-success,
+body .fc-mssg.fc-success {
 	background: #DFF0D8 url(../images/accept.png) no-repeat 10px 50%;
-	color: #468847 !important;
-	border-color: #D6E9C6 !important;
+	color: #468847;
+	border-color: #D6E9C6;
 }
-.fc-mssg-inline.fc-info,
-.fc-mssg.fc-info {
+body .fc-mssg-inline.fc-info,
+body .fc-mssg.fc-info {
 	background: #D9EDF7 url(../images/information.png) no-repeat 10px 50%;
-	color: #3A87AD !important;
-	border-color: #BCE8F1 !important;
+	color: #3A87AD;
+	border-color: #BCE8F1;
 }
-.fc-mssg-inline-box {
+body .fc-mssg-inline-box {
 	display: inline-block;
 	border-width: 0;
 	padding: 2px;
 	margin: 0 6px 2px 0;
 }
 
-.alert.fc-error {
+body .alert.fc-error {
 	background: #F2DEDE url(../images/error.png) no-repeat 10px 50%;
-	padding-left: 36px !important;
+	padding-left: 36px;
 }
-.alert.fc-warning {
+body .alert.fc-warning {
 	background: #FCF8E3 url(../images/warning.png) no-repeat 10px 50%;
 	padding-left: 36px;
 }
-.alert.fc-success {
+body .alert.fc-success {
 	background: #DFF0D8 url(../images/accept.png) no-repeat 10px 50%;
 	padding-left: 36px;
 }
-.alert.fc-info {
+body .alert.fc-info {
 	background: #D9EDF7 url(../images/information.png) no-repeat 10px 50%;
 	padding-left: 36px;
 }
 
-.fc-noauth {
+body .fc-noauth {
 	display: inline-block;
 	background: #FCF8CA url(../images/warning.png) no-repeat 10px 50%;
-	color: #C09853 !important;
-	border: 1px solid #FBEED5 !important;
-	border-radius: 6px !important;
-	padding: 3px 6px 4px 36px !important;
-	margin: 0 0 5px 0 !important;
+	color: #C09853;
+	border: 1px solid #FBEED5;
+	border-radius: 6px;
+	padding: 3px 6px 4px 36px;
+	margin: 0 0 5px 0;
 	font-family: tahoma;
 	font-size:11px;
 	white-space: normal;
 	line-height: 140%;
 }
-.fc-caption {
+body .fc-caption {
 	display: inline-block;
 	background: lightgray url(../images/comment.png) no-repeat 10px 50%;
-	color: black !important;
-	border: 1px solid #ddd !important;
-	border-radius: 6px !important;
-	padding: 3px 6px 4px 36px !important;
-	margin: 0 0 5px 0 !important;
+	color: black;
+	border: 1px solid #ddd;
+	border-radius: 6px;
+	padding: 3px 6px 4px 36px;
+	margin: 0 0 5px 0;
 	font-family: tahoma;
 	font-size:11px;
 	white-space: normal;
 	line-height: 140%;
-
-}
-.fc-tooltip-img {
 }
 
 
@@ -134,78 +133,95 @@
  * State Toggler
  ****************/
 
-ul.statetoggler {
-	/*float: right !important;*/
+#flexicontent ul.statetoggler {
+	float: none;
+	margin: 0;
 	vertical-align: top;
-	display: inline-block !important;
-	list-style: none !important;
-	margin: 0 4px !important;
-	padding: 0 !important;
-	width: auto !important;
+	display: inline-block;
+	list-style: none;
+	padding: 0;
+	width: auto;
 }
 
-ul.statetoggler > li.topLevel > .options {
-	padding: 0px !important;
-	margin: 0 !important;
-	background: white !important;
-	/*position: relative !important;*/
-	position: absolute !important;
-	font-size:14px !important;
-	width: auto !important;
+#flexicontent ul.statetoggler > li.topLevel > .options {
+	padding: 0px;
+	margin: 0;
+	background: white;
+	position: absolute;
+	font-size:14px;
+	width: auto;
 	height: 0;
 }
 
-ul.statetoggler > li.topLevel > .options > div {
-	display: inline-block !important;
+#flexicontent ul.statetoggler > li.topLevel > .options > div {
+	display: inline-block;
 	padding:0px 4px;
 }
 
-ul.statetoggler > li.topLevel > .options ul {
-	display: inline-block !important;
-	padding: 0 !important;
-	margin: 0 !important;
-	background: white !important;
-	border: 1px solid silver !important;
-	width: auto !important;
+#flexicontent ul.statetoggler > li.topLevel > .options ul {
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+	background: white;
+	border: 1px solid silver;
+	width: auto;
 }
 
-ul.statetoggler > li.topLevel, .statetoggler > li.topLevel ul > li {
-	background: none repeat scroll 0 0 transparent !important;
-	overflow: visible !important;
-	min-height: 20px !important;
-	width: auto !important;
-	display: -moz-inline-stack !important;
-	display: inline-block !important;
-	vertical-align: top !important;
-	padding: 0 !important;
-	margin: 0 !important;
-	zoom: 1 !important;
-	*display: inline !important;
-	_height: 20px !important;
+#flexicontent ul.statetoggler > li.topLevel, .statetoggler > li.topLevel ul > li {
+	background: none repeat scroll 0 0 transparent;
+	overflow: visible;
+	min-height: 20px;
+	width: auto;
+	display: -moz-inline-stack;
+	display: inline-block;
+	vertical-align: top;
+	padding: 0;
+	margin: 0;
+	zoom: 1;
+	*display: inline;
+	_height: 20px;
 }
 
-ul.statetoggler > li.topLevel span.btn, ul.statetoggler > li.topLevel span.fcbutton  {
+#flexicontent ul.statetoggler > li.topLevel span.btn, ul.statetoggler > li.topLevel span.fcbutton  {
 	padding-left:4px;
 	padding-right:4px;
 }
 
-ul.statetoggler > li.topLevel, .statetoggler > li.topLevel ul > li a {
-	padding: 0 !important;
-	margin: 0 !important;
+#flexicontent ul.statetoggler > li.topLevel, .statetoggler > li.topLevel ul > li a {
+	padding: 0;
+	margin: 0;
 }
 
-ul.statetoggler > li.topLevel ul > li img {
-	padding: 2px !important;
-	margin: 0 !important;
+#flexicontent ul.statetoggler > li.topLevel ul > li img {
+	padding: 2px;
+	margin: 0;
 }
 
-ul.statetoggler > li.topLevel > a.opener {
-	/*padding: 4px 8px !important;*/
-	/*margin: 0 !important;*/
+#flexicontent ul.statetoggler > li.topLevel > a.opener {
 }
-ul.statetoggler > li.topLevel > a.opener img {
-	padding: 2px 0px !important;
-	margin: 0 !important;
+
+#flexicontent ul.statetoggler > li.topLevel > a.opener img {
+	padding: 2px 0px;
+	margin: 0;
+}
+
+
+
+/************
+ * Rating bar
+ ************/
+
+#flexicontent .qf_ratingbarcontainer {
+	border: 1px solid #999999;
+	height: 10px;
+	width: 60px;
+	margin: 2px 2px;
+	display: block;
+}
+#flexicontent .qf_ratingbar {
+	background-color: silver;
+	height: 10px;
+	display: block;
 }
 
 
@@ -214,7 +230,7 @@ ul.statetoggler > li.topLevel > a.opener img {
  * Pager Container, e.g. flexicontent item versions
  **************************************************/
  
-#fc_pager ul.pages {
+#flexicontent #fc_pager ul.pages {
 	float:left;
 	left:50%;
 	list-style-type:none;
@@ -223,7 +239,7 @@ ul.statetoggler > li.topLevel > a.opener img {
 	position:relative;
 }
 
-#fc_pager ul.pages li {
+#flexicontent #fc_pager ul.pages li {
 	float:left;
 	position:relative;
 	right:50%;
@@ -234,16 +250,16 @@ ul.statetoggler > li.topLevel > a.opener img {
 	text-decoration:none;
 }
 
-#fc_pager ul.pages li:hover {
+#flexicontent #fc_pager ul.pages li:hover {
 	border:1px solid #aaa;
 }
 
-#fc_pager ul.pages li.pgEmpty {
+#flexicontent #fc_pager ul.pages li.pgEmpty {
 	border:1px solid #ddd;
 	color:#ddd;
 }
 
-#fc_pager ul.pages li.pgCurrent {
+#flexicontent #fc_pager ul.pages li.pgCurrent {
 	border:1px solid #aaa;
 	color:#000;
 	font-weight:bold;
@@ -256,15 +272,20 @@ ul.statetoggler > li.topLevel > a.opener img {
  * Various Containers
  ********************/
  
-.fc_nice_box {
-	border-radius: 6px;
-	margin: 0px 0px 8px 0px;
-	padding: 2px 8px;
-	float: none;
-	clear: both !important;
-	border: 1px solid lightgray;
+ #flexicontent .nowrap_box,
+.flexicontent .nowrap_box {
+	white-space: nowrap !important;  /* FORCED (this is the purpose of the class) */
+	vertical-align: top;
 	display: inline-block;
-	background-color: lightyellow;
-	font-weight: bold;
-	font-size: 11px;
+	float: none;
 }
+#flexicontent .nowrap_box .label,
+.flexicontent .nowrap_box .label {
+	vertical-align: top;
+}
+#flexicontent .filterbuttons_head .nowrap_box .label,
+.flexicontent .filterbuttons_head .nowrap_box .label {
+	vertical-align: middle;
+}
+
+.fc-tooltip-img {}
