# Minor fixes (recently added) backend search view listing basic index records, and minor changes to HTML of fields views

--- a/site/assets/css/flexi_containers.css
+++ b/site/assets/css/flexi_containers.css
@@ -96,6 +96,10 @@ body .alert.fc-small {
 body .alert.fc-iblock {
 	display: inline-block;
 }
+body .alert.fc-small.fc-iblock {
+	display: inline-block;
+	margin: 0px 4px;
+}
 
 /* some special cases */
 body .fc-noauth {
